Statuszähler FIX, Scrollbar Bewerbungsprozess entfernt, seltsame loading gif. am Anfang entfernt, Popup Text Validierung angepasst.

--- a/src/main/webapp/WebContent/CSS/bewerbungsportal.css
+++ b/src/main/webapp/WebContent/CSS/bewerbungsportal.css
@@ -134,7 +134,7 @@ iframe {
 }
 
 #bewFormular {
-	overflow-y: scroll;
+	overflow-y: hide;
 	color: black;
 	text-align: left;
 }
